@@ -203,7 +203,8 @@ type
     function GetStatus: IStatus; override;
     function HasRollbackRetaining: boolean;
     function IsEmbeddedServer: boolean; override;
-    function GetImplementationVersion: AnsiString;
+    function GetClientMajor: integer; override;
+    function GetClientMinor: integer; override;
 
     {Firebird 3 API}
     function HasMasterIntf: boolean;
@@ -538,6 +539,16 @@ begin
 {$ENDIF}
 end;
 
+function TFB25ClientAPI.GetClientMajor: integer;
+begin
+  Result := 2;
+end;
+
+function TFB25ClientAPI.GetClientMinor: integer;
+begin
+  Result := 5;
+end;
+
 function TFB25ClientAPI.HasMasterIntf: boolean;
 begin
   Result := false;
@@ -546,11 +557,6 @@ end;
 function TFB25ClientAPI.GetIMaster: TObject;
 begin
   Result := nil;
-end;
-
-function TFB25ClientAPI.GetImplementationVersion: AnsiString;
-begin
-  Result := FBClientInterfaceVersion;
 end;
 
 function TFB25ClientAPI.DecodeInteger(bufptr: PByte; len: short): integer;
